--- a/xdocs/reuse.html
+++ b/xdocs/reuse.html
@@ -1,4 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
+<!-- $Revision: 1.3 $ $Date: 2003/08/16 10:53:46 $ -->
+
 <html>
 <head>
 </head>
