o added revison + indent
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@44125 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/core/xdocs/index.html
+++ b/modules/core/xdocs/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
+<!-- $Revision: 1.3 $ $Date: 2003/09/01 10:19:35 $ -->
+
 <html>
 <head>
 </head>
+
 <body>
-<h1>Introduction</h1>
-
-This is the core J2EE part of Geronimo. It handles loading components, interception, deployment
-units and defines the core lifecycle, locking, context and transaction hooks etc.
-<br>
-Any component can be deployed inside this container currently via JMX MBeans.
-
+  <h1>Introduction</h1>
+  
+  This is the core J2EE part of Geronimo. It handles loading components, interception, deployment
+  units and defines the core lifecycle, locking, context and transaction hooks etc.
+  <br>
+  Any component can be deployed inside this container currently via JMX MBeans.
 </body>
+
 </html>
