--- a/docs_nopublish/JBoss_20031031.html
+++ b/docs_nopublish/JBoss_20031031.html
@@ -35,10 +35,10 @@ org.apache.geronimo.common.InvocationType is similar to
 org.jboss.invocation.InvocationType.<br>
   </li>
   <li>Assertion D : The source files org.jboss.invocation.Invocation
-and org.apache.geronimo.common.Invocation are simliar.&nbsp; Further,
+and org.apache.geronimo.common.Invocation are similar.&nbsp; Further,
 the architectural concepts of "AsIs", "Transient" and "Marshalled" are
 present because of copying of the JBoss code,&nbsp; and that these
-concepts are central to the architecture of both JBoss and Geronimo.\</li>
+concepts are central to the architecture of both JBoss and Geronimo.</li>
 </ul>
 <h3>Notes</h3>
 <ol>
@@ -46,7 +46,7 @@ concepts are central to the architecture of both JBoss and Geronimo.\</li>
  href="http://cvs.apache.org/viewcvs/incubator-geronimo/">http://cvs.apache.org/view.cvs/incubator-geronimo/</a>&nbsp;
 and all Geronimo code references are relative to this root.</li>
   <li>The source code for JBoss is accessible via CVS at <a
- href="http://cvs.sourceforge.net/viewcvs.py/*checkout*/jboss/jboss/src/main/">http://cvs.sourceforge.net/viewcvs.py/*checkout*/jboss/jboss/src/main/</a>
+ href="http://cvs.sourceforge.net/viewcvs.py/jboss/jboss/src/main/">http://cvs.sourceforge.net/viewcvs.py/jboss/jboss/src/main/</a>
 and all JBoss code references are relative to this root.</li>
   <li>The <a href="http://www.apache.org/licenses/LICENSE">Apache
 Software License</a> is a business-friendly license that allows others
@@ -55,7 +55,7 @@ the terms of our license.&nbsp; This will be important for Exhibits A
 and B - the license clearly states that <br>
   </li>
 </ol>
-<div style="margin-left: 80px;">&nbsp;* 1. Redistributions of source
+<div style="margin-left: 80px; font: fix">&nbsp;* 1. Redistributions of source
 code must retain the above copyright<br>
 &nbsp;*&nbsp;&nbsp;&nbsp; notice, this list of conditions and the
 following disclaimer.<br>
@@ -83,7 +83,7 @@ for this example, the violation of copyright would be the exact
 reverse. "<br>
 </div>
 <br>
-Ceiki has traced back the history of the XLevel class, and thus we
+Ceki has traced back the history of the XLevel class, and thus we
 claim that the XLevel code originated at the ASF as part of the log4j
 project. Thus, we believe that Exhibit A is invalid due to the code in
 question being copyrighted by the ASF in the first place.&nbsp; <br>
@@ -92,23 +92,23 @@ question being copyrighted by the ASF in the first place.&nbsp; <br>
 Exhibit B in concerned with similarity between <a
  href="http://cvs.apache.org/viewcvs/incubator-geronimo/modules/core/src/java/org/apache/geronimo/core/log/Attic/PatternParser.java?rev=1.1&amp;content-type=text/vnd.viewcvs-markup">org.apache.geronimo.core.log.PatternParser</a>
 and&nbsp; <a
- href="http://cvs.sourceforge.net/viewcvs.py/jboss/jboss-common/src/main/org/jboss/logging/layout/PatternParserEx.java?rev=1.1.2.1&amp;view=markup">org.jboss.logging.layout.PatternParserX</a><br>
+ href="http://cvs.sourceforge.net/viewcvs.py/jboss/jboss-common/src/main/org/jboss/logging/layout/PatternParserEx.java?rev=1.1.2.1&amp;view=markup">org.jboss.logging.layout.PatternParserEx</a><br>
 <br>
 According to the same research for Exhibit A by Ceki G&uuml;lc&uuml; :<br>
 <br>
 <div style="margin-left: 40px;">"The PatternParserEx class, cited in
 Mr. David J. Byer's letter to the ASF, very closely follows the pattern
 established MyPatternParser and AppServerPatternParser classes. The
-earliest record of this class in Jboss source code repository dates to
-September 15th, 2002. Unless JBoss LLC claims thatPatternParserEx
+earliest record of this class in JBoss source code repository dates to
+September 15th, 2002. Unless JBoss LLC claims that PatternParserEx
 predates MyPatternParser or AppServerPatternParser classes found in
 log4j, it looks like the JBoss LLC removed the existing Apache
-copyright when it based PatternParserExclass on modified versions of
-PatternParserEx and AppServerPatternParser. This is prohibited by the
+copyright when it based PatternParserEx class on modified versions of
+MyPatternParser and AppServerPatternParser. This is prohibited by the
 first clause of the Apache Software License.<br>
 </div>
 <br>
-We believe that the claims in Exhibit B is invalud due to the code in
+We believe that the claims in Exhibit B is invalid due to the code in
 question being based on the same code in the Apache log4j codebase.<br>
 <h3>Summary for Exhibit C</h3>
 Exhibit C is concerned with the similarity between
@@ -119,7 +119,7 @@ based on discussion from the geronimo-dev list.<br>
 The initial version of org.jboss.invocation.InvocationType in the JBoss
 CVS repository can be found at the following location:<br>
 <br>
-http://cvs.sourceforge.net/viewcvs.py/jboss/jboss/src/main/org/jboss/invocation/InvocationType.java?rev=1.1&amp;view=markup<br>
+<a href="http://cvs.sourceforge.net/viewcvs.py/jboss/jboss/src/main/org/jboss/invocation/InvocationType.java?rev=1.1&amp;view=markup">http://cvs.sourceforge.net/viewcvs.py/jboss/jboss/src/main/org/jboss/invocation/InvocationType.java?rev=1.1&amp;view=markup</a><br>
 <br>
 This contains a very similar code excerpt to that cited in the letter
 from JBoss Group LLC:<br>
@@ -164,7 +164,7 @@ including) the changes made by Scott or anyone else<br>
 <br>
 Dain's last rev is<br>
 <br>
-http://cvs.sourceforge.net/viewcvs.py/*checkout*/jboss/jboss/src/main/org/jboss/invocation/InvocationType.java?content-type=text%2Fplain&amp;rev=1.3<br>
+<a href="http://cvs.sourceforge.net/viewcvs.py/*checkout*/jboss/jboss/src/main/org/jboss/invocation/InvocationType.java?content-type=text%2Fplain&amp;rev=1.3">http://cvs.sourceforge.net/viewcvs.py/*checkout*/jboss/jboss/src/main/org/jboss/invocation/InvocationType.java?content-type=text%2Fplain&amp;rev=1.3</a><br>
 <br>
 The latest rev in JBoss is v 1.5, so we need to figure out what
 happened between v1.3, which Dain had the right to contribute to the ASF<br>
@@ -207,7 +207,7 @@ Conclusion<br>
 Dain contributed the same code to Geronimo that he contributed to JBoss.<br>
 <br>
 The only difference between his JBoss contributions, for which he has
-complete rights to contribute and relicense elsehwere, is that he
+complete rights to contribute and relicense elsewhere, is that he
 changed the Geronimo implementation to use an array of rather than an
 ArrayList to hold the InvocationType objects, and a static final int
 'constant' to keep the size of that array rather than a static int
@@ -217,7 +217,7 @@ field.<br>
 Assertion D is concerned with the similarity between
 org.apache.geronimo.common.Invocation and
 org.jboss.invocation.Invocation.&nbsp; Further, the claim is that both
-files contain "AsIs", "Transient" and "Marhsalled", which are believed
+files contain "AsIs", "Transient" and "Marshalled", which are believed
 to be JBoss-specific payloads, and thus could only be there via
 copying. Further, the Invocation file is central to the JBoss
 architecture, and thus copying could have great impact throughout
@@ -236,7 +236,7 @@ Clearly this can't be what the lawyers are talking about.&nbsp;
 However, it used to be, when the code first placed into Geronimo,
 slightly different :<br>
 <br>
-http://cvs.apache.org/viewcvs/incubator-geronimo/modules/core/src/java/org/apache/geronimo/common/Attic/Invocation.java?rev=1.1&amp;content-type=text/vnd.viewcvs-markup<br>
+<a href="http://cvs.apache.org/viewcvs/incubator-geronimo/modules/core/src/java/org/apache/geronimo/common/Attic/Invocation.java?rev=1.1&amp;content-type=text/vnd.viewcvs-markup">http://cvs.apache.org/viewcvs/incubator-geronimo/modules/core/src/java/org/apache/geronimo/common/Attic/Invocation.java?rev=1.1&amp;content-type=text/vnd.viewcvs-markup</a><br>
 <br>
 public interface Invocation {<br>
 &nbsp;&nbsp;&nbsp; Object getMarshal(Object key);<br>
@@ -329,7 +329,7 @@ public interface InvocationKey {<br>
 <br>
 so now the idea of declaring something as not going over the wire (my
 assumption) is taken care of in the key itself into this map, letting
-(I assume again) the endpoint doing the serialzation decide if the
+(I assume again) the endpoint doing the serialization decide if the
 element in the map needs to go based on the isTransient() method, and
 how marshalled based on the class. <br>
 <br>
