--- a/docs_nopublish/JBoss_20031031.html
+++ b/docs_nopublish/JBoss_20031031.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <meta content="text/html; charset=ISO-8859-1"
- http-equiv="content-type">
+  <meta http-equiv="content-type"
+ content="text/html; charset=ISO-8859-1">
   <title>JBoss 20031031</title>
 </head>
 <body>
@@ -55,7 +55,7 @@ the terms of our license.&nbsp; This will be important for Exhibits A
 and B - the license clearly states that <br>
   </li>
 </ol>
-<div style="margin-left: 80px; font: fix">&nbsp;* 1. Redistributions of source
+<div style="margin-left: 80px;">&nbsp;* 1. Redistributions of source
 code must retain the above copyright<br>
 &nbsp;*&nbsp;&nbsp;&nbsp; notice, this list of conditions and the
 following disclaimer.<br>
@@ -85,8 +85,9 @@ reverse. "<br>
 <br>
 Ceki has traced back the history of the XLevel class, and thus we
 claim that the XLevel code originated at the ASF as part of the log4j
-project. Thus, we believe that Exhibit A is invalid due to the code in
-question being copyrighted by the ASF in the first place.&nbsp; <br>
+project. Thus, we believe that Exhibit A is invalid due to the fact
+that the original source of the code in question is copyrighted by the
+ASF. <br>
 <br>
 <h3>Summary for Exhibit B</h3>
 Exhibit B in concerned with similarity between <a
@@ -108,8 +109,9 @@ MyPatternParser and AppServerPatternParser. This is prohibited by the
 first clause of the Apache Software License.<br>
 </div>
 <br>
-We believe that the claims in Exhibit B is invalid due to the code in
-question being based on the same code in the Apache log4j codebase.<br>
+We believe that the claims in Exhibit B are invalid owing to the fact
+that the code in
+question was based on code in the Apache log4j codebase.<br>
 <h3>Summary for Exhibit C</h3>
 Exhibit C is concerned with the similarity between
 org.apache.geronimo.common.InvocationType and
@@ -119,7 +121,8 @@ based on discussion from the geronimo-dev list.<br>
 The initial version of org.jboss.invocation.InvocationType in the JBoss
 CVS repository can be found at the following location:<br>
 <br>
-<a href="http://cvs.sourceforge.net/viewcvs.py/jboss/jboss/src/main/org/jboss/invocation/InvocationType.java?rev=1.1&amp;view=markup">http://cvs.sourceforge.net/viewcvs.py/jboss/jboss/src/main/org/jboss/invocation/InvocationType.java?rev=1.1&amp;view=markup</a><br>
+<a
+ href="http://cvs.sourceforge.net/viewcvs.py/jboss/jboss/src/main/org/jboss/invocation/InvocationType.java?rev=1.1&amp;view=markup">http://cvs.sourceforge.net/viewcvs.py/jboss/jboss/src/main/org/jboss/invocation/InvocationType.java?rev=1.1&amp;view=markup</a><br>
 <br>
 This contains a very similar code excerpt to that cited in the letter
 from JBoss Group LLC:<br>
@@ -164,7 +167,8 @@ including) the changes made by Scott or anyone else<br>
 <br>
 Dain's last rev is<br>
 <br>
-<a href="http://cvs.sourceforge.net/viewcvs.py/*checkout*/jboss/jboss/src/main/org/jboss/invocation/InvocationType.java?content-type=text%2Fplain&amp;rev=1.3">http://cvs.sourceforge.net/viewcvs.py/*checkout*/jboss/jboss/src/main/org/jboss/invocation/InvocationType.java?content-type=text%2Fplain&amp;rev=1.3</a><br>
+<a
+ href="http://cvs.sourceforge.net/viewcvs.py/*checkout*/jboss/jboss/src/main/org/jboss/invocation/InvocationType.java?content-type=text%2Fplain&amp;rev=1.3">http://cvs.sourceforge.net/viewcvs.py/*checkout*/jboss/jboss/src/main/org/jboss/invocation/InvocationType.java?content-type=text%2Fplain&amp;rev=1.3</a><br>
 <br>
 The latest rev in JBoss is v 1.5, so we need to figure out what
 happened between v1.3, which Dain had the right to contribute to the ASF<br>
@@ -236,7 +240,8 @@ Clearly this can't be what the lawyers are talking about.&nbsp;
 However, it used to be, when the code first placed into Geronimo,
 slightly different :<br>
 <br>
-<a href="http://cvs.apache.org/viewcvs/incubator-geronimo/modules/core/src/java/org/apache/geronimo/common/Attic/Invocation.java?rev=1.1&amp;content-type=text/vnd.viewcvs-markup">http://cvs.apache.org/viewcvs/incubator-geronimo/modules/core/src/java/org/apache/geronimo/common/Attic/Invocation.java?rev=1.1&amp;content-type=text/vnd.viewcvs-markup</a><br>
+<a
+ href="http://cvs.apache.org/viewcvs/incubator-geronimo/modules/core/src/java/org/apache/geronimo/common/Attic/Invocation.java?rev=1.1&amp;content-type=text/vnd.viewcvs-markup">http://cvs.apache.org/viewcvs/incubator-geronimo/modules/core/src/java/org/apache/geronimo/common/Attic/Invocation.java?rev=1.1&amp;content-type=text/vnd.viewcvs-markup</a><br>
 <br>
 public interface Invocation {<br>
 &nbsp;&nbsp;&nbsp; Object getMarshal(Object key);<br>
@@ -338,9 +343,9 @@ Summary so far : the original code had an expression of the idea of
 dropped.&nbsp; All that remains of the idea is letting the caller
 declare the data as transient.<br>
 <br>
-Here's the kicker.&nbsp; The JBoss lawyers assert that "the Invocation
-file is central to the architecture of both JBoss and Geronimo".&nbsp;
-We believe that this claim is invalid because if this notion of AsIs,
+While the JBoss lawyers assert that "the Invocation file is central to
+the architecture of both JBoss and Geronimo", we believe that this
+claim is invalid&nbsp; because if this notion of AsIs,
 Transient and Marshalled was 'central to the architecture', it couldn't
 be dropped to the degree that the Geronimo developers did.&nbsp; IOW,
 the notions of AsIs and Marshalled are NOT central to the architecture
