--- a/xdocs/reuse.html
+++ b/xdocs/reuse.html
@@ -17,7 +17,7 @@
   
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
-<!-- $Revision: 1.4 $ $Date: 2004/03/10 10:00:49 $ -->
+<!-- $Revision: 1.5 $ $Date: 2004/06/04 11:50:32 $ -->
 
 <html>
 <head>
@@ -25,21 +25,23 @@
 <body>
 <h1>Reusable Services</h1>
 
-We hope to make use of the following fine open source software to help complete make the Geronimo J2EE stack...
+We hope to make use of the following fine open source software to help complete  the Geronimo J2EE stack.
 
 <ul>
 <li>
-MX4J for JMX 
+<a href="http://mx4j.sourceforge.net/">MX4J</a> for JMX
 </li>
 <li>
-Tomcat or Jetty for Web Container 
-Axis for Web Services Stack 
+Apache Tomcat or Jetty for Web Container
 </li>
 <li>
-James for email 
+Apache Axis for Web Services Stack
 </li>
 <li>
-OJB for JDO & plugins to the CMP engine (Hibernate is LGPL to the bindings to Geronimo must be outside of Apache)
+Apache's Jakarta James for email
+</li>
+<li>
+OJB for JDO & plugins to the CMP engine (Hibernate is LGPL - the bindings to Geronimo must be outside of Apache)
 </li>
 <li>
 commons-jndi for JNDI - 
@@ -48,10 +50,10 @@ move this to Jakarta Commons so we can all work & extend it - there are various
 features from Jetty and OpenEjb ?we'd like to add? ). 
 </li>
 <li>
-OpenJms ?for JMS 
+<a href="http://activemq.codehaus.org/">Codehaus' ActiveMQ</a> for JMS
 </li>
 <li>
-Tyrex for Transaction Manager 
+<a href="http://jotm.objectweb.org/">ObjectWeb's JOTM</a> for transaction management
 </li>
 </ul>
 
