--- a/xdocs/index.html
+++ b/xdocs/index.html
@@ -5,19 +5,19 @@
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
-  
+
        http://www.apache.org/licenses/LICENSE-2.0
-  
+
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-  
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
-<!-- $Revision: 1.5 $ $Date: 2004/06/04 11:50:32 $ -->
+<!-- $Revision: 1.6 $ $Date: 2004/06/18 04:47:25 $ -->
 
 <html>
 <head>
@@ -61,7 +61,7 @@ server.
 
 <h2>Binaries</h2>
 <ul>
-<li><a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-bin.zip 1.0-M1">1.0-M1 zip</a>
+<li><a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-bin.zip">1.0-M1 zip</a>
     &nbsp;<a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-bin.zip.asc">PGP</a>
     &nbsp;<a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-bin.zip.md5">MD5</a>
 </li>
@@ -93,22 +93,22 @@ server.
 
 <p>
 The Java 2, Enterprise Edition (J2EE) platform is employed widely by
-organizations implementing enterprise applications. It is commonly used in 
-business-to-consumer and most recently in Web service deployments. 
-Most of the largest business organizations today have deployed applications 
+organizations implementing enterprise applications. It is commonly used in
+business-to-consumer and most recently in Web service deployments.
+Most of the largest business organizations today have deployed applications
 on a J2EE platform.
 </p>
 
 <p>
 While the J2EE specification is implemented by a number of large and small
-vendors, there is no open source J2EE container available with a BSD or 
-BSD-derived licence nor is there an open source project today that provides 
-a fully compliant implementation.  Verifiable compliance with the J2EE 
-specification is important to business because it ensures that applications 
-deployed by developers are portable and interoperable across J2EE providers. 
-As a result organizations large and small have felt compelled to pay 
-thousands of dollars to commercial vendors in order to deploy applications 
-based on J2EE compliant servers. 
+vendors, there is no open source J2EE container available with a BSD or
+BSD-derived licence nor is there an open source project today that provides
+a fully compliant implementation.  Verifiable compliance with the J2EE
+specification is important to business because it ensures that applications
+deployed by developers are portable and interoperable across J2EE providers.
+As a result organizations large and small have felt compelled to pay
+thousands of dollars to commercial vendors in order to deploy applications
+based on J2EE compliant servers.
 </p>
 
 <p>
@@ -121,8 +121,8 @@ J2EE platform such as Servlets, JSP via Jakarta's
 
 <p>
 The aim of the project is to produce a large and healthy community of J2EE
-developers tasked with the development of an open source, certified J2EE 
-server, that is ASF licensed and passes Sun's TCK reusing the best ASF/BSD 
+developers tasked with the development of an open source, certified J2EE
+server, that is ASF licensed and passes Sun's TCK reusing the best ASF/BSD
 licensed code available today and adding new code to complete the J2EE stack.
 </p>
 
