update to reflect the notice and onging discussion w/ sun
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45618 13f79535-47bb-0310-9956-ffa450edef68

--- a/xdocs/download.html
+++ b/xdocs/download.html
@@ -17,7 +17,7 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
-<!-- $Revision: 1.1 $ $Date: 2004/06/04 11:50:32 $ -->
+<!-- $Revision: 1.2 $ $Date: 2004/07/08 16:26:58 $ -->
 
 <html>
 <head>
@@ -25,10 +25,43 @@
 <body>
 
 
-<h1>Downloads</h1>
+<h1>Certified Downloads</h1>
 
 <p>
-Currently, the Apache Geronimo has no certified releases.  However the
+Currently, the Apache Geronimo has no certified releases.
+</p>
+
+<p>
+The Apache J2EE license require the ASF to present the following notice from Sun Microsystems with our certified releases :
+</p>
+
+<p>
+NOTICE FROM SUN MICROSYSTEMS :
+</p>
+<blockquote>
+<i>Any redistributed derivative work of the software licensed hereunder must be compatible and branded with the appropriate compatibility logo specified b
+y Sun and licensed by Sun persuant to a separate Trademark License required to be executed by you with Sun.
+</i>
+
+</blockquote>
+
+<p>
+
+The ASF is working with Sun to resolve problems with the contents of this notice.  An example of a proposed alternative wording :
+
+<blockquote>
+<i>
+Any claims of compliance to Java(tm) Technology Specification(s)
+apply only to the original, unmodified Work.  Derivative Works do not
+inherit compliance and may be subject to third-party restrictions on
+claims of compliance and use of related trademarks.
+</i>
+</blockquote>
+
+<h1>Milestone Downloads</h1>
+
+<p>
+The
 following non-certified milestone releases are available.  These milestone
 releases are 'technology demonstrations' and not offered as a J2EE-compatible
 server.
