--- a/xdocs/download.html
+++ b/xdocs/download.html
@@ -17,7 +17,7 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
-<!-- $Revision: 1.2 $ $Date: 2004/07/08 16:26:58 $ -->
+<!-- $Revision: 1.3 $ $Date: 2004/07/10 18:07:25 $ -->
 
 <html>
 <head>
@@ -69,7 +69,7 @@ server.
 
 <h2>Binaries</h2>
 <ul>
-<li><a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-bin.zip 1.0-M1">1.0-M1 zip</a>
+<li><a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-bin.zip">1.0-M1 zip</a>
     &nbsp;<a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-bin.zip.asc">PGP</a>
     &nbsp;<a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-bin.zip.md5">MD5</a>
 </li>
