--- a/xdocs/download.html
+++ b/xdocs/download.html
@@ -17,7 +17,7 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
-<!-- $Revision: 1.3 $ $Date: 2004/07/10 18:07:25 $ -->
+<!-- $Revision: 1.4 $ $Date: 2004/09/09 06:08:06 $ -->
 
 <html>
 <head>
@@ -69,33 +69,37 @@ server.
 
 <h2>Binaries</h2>
 <ul>
-<li><a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-bin.zip">1.0-M1 zip</a>
-    &nbsp;<a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-bin.zip.asc">PGP</a>
-    &nbsp;<a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-bin.zip.md5">MD5</a>
+<li><a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.zip">1.0-M2 zip</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.zip.asc">PGP</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.zip.sha">SHA</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.zip.md5">MD5</a>
 </li>
 <li>
-    <a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-bin.tar.gz">1.0-M1 tar.gz</a>
-    &nbsp;<a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-bin.tar.gz.asc">PGP</a>
-    &nbsp;<a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-bin.tar.gz.md5">MD5</a>
+    <a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.tar.gz">1.0-M2 tar.gz</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.tar.gz.asc">PGP</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.tar.gz.sha">SHA</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.tar.gz.md5">MD5</a>
 </li>
 </ul>
 
 <h2>Source Code</h2>
 <ul>
 <li>
-   <a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-src.zip">1.0-M1 zip</a>
-   &nbsp;<a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-src.zip.asc">PGP</a>
-   &nbsp;<a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-src.zip.md5">MD5</a>
+   <a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-src.zip">1.0-M2 zip</a>
+   &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-src.zip.asc">PGP</a>
+   &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-src.zip.sha">SHA</a>
+   &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-src.zip.md5">MD5</a>
 </li>
 <li>
-    <a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-src.tar.gz">1.0-M1 tar.gz</a>
-    &nbsp;<a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-src.tar.gz.asc">PGP</a>
-    &nbsp;<a href="http://cvs.apache.org/dist/incubator/geronimo/incubator-geronimo-1.0-M1-src.tar.gz.md5">MD5</a>
+    <a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-src.tar.gz">1.0-M2 tar.gz</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-src.tar.gz.asc">PGP</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-src.tar.gz.sha">SHA</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-src.tar.gz.md5">MD5</a>
 </li>
 </ul>
 
 <br/>
-<a href="http://cvs.apache.org/dist/incubator/geronimo/KEYS">KEYS</a>
+<a href="http://cvs.apache.org/dist/geronimo/KEYS">KEYS</a>
 
 </body>
 </html>
