Binary arcives don't end with -bin
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45852 13f79535-47bb-0310-9956-ffa450edef68

--- a/xdocs/download.html
+++ b/xdocs/download.html
@@ -17,7 +17,7 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
-<!-- $Revision: 1.4 $ $Date: 2004/09/09 06:08:06 $ -->
+<!-- $Revision: 1.5 $ $Date: 2004/09/09 07:38:12 $ -->
 
 <html>
 <head>
@@ -69,16 +69,16 @@ server.
 
 <h2>Binaries</h2>
 <ul>
-<li><a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.zip">1.0-M2 zip</a>
-    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.zip.asc">PGP</a>
-    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.zip.sha">SHA</a>
-    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.zip.md5">MD5</a>
+<li><a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2.zip">1.0-M2 zip</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2.zip.asc">PGP</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2.zip.sha">SHA</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2.zip.md5">MD5</a>
 </li>
 <li>
-    <a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.tar.gz">1.0-M2 tar.gz</a>
-    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.tar.gz.asc">PGP</a>
-    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.tar.gz.sha">SHA</a>
-    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-bin.tar.gz.md5">MD5</a>
+    <a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2.tar.gz">1.0-M2 tar.gz</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2.tar.gz.asc">PGP</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2.tar.gz.sha">SHA</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2.tar.gz.md5">MD5</a>
 </li>
 </ul>
 
