--- a/xdocs/index.html
+++ b/xdocs/index.html
@@ -17,7 +17,7 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
-<!-- $Revision: 1.8 $ $Date: 2004/09/09 07:38:12 $ -->
+<!-- $Revision: 1.9 $ $Date: 2004/09/09 18:06:50 $ -->
 
 <html>
 <head>
@@ -71,6 +71,9 @@ server.
     &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2.tar.gz.asc">PGP</a>
     &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2.tar.gz.sha">SHA</a>
     &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2.tar.gz.md5">MD5</a>
+</li>
+<li>
+   <a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/RELEASE-NOTES-1.0-M2.txt">Release Notes</a>
 </li>
 </ul>
 
