--- a/xdocs/index.html
+++ b/xdocs/index.html
@@ -23,6 +23,14 @@
 <head>
 </head>
 <body>
+<h1>ApacheCon 2004</h1>
+
+<a href="http://ApacheCon.Com/2004/US/">
+    <img src="http://ApacheCon.Com/2004/US/logos/logo_only.gif"
+         width="170" height="100" alt="ApacheCon!" title="Come to ApacheCon!"
+         border="0" />
+</a>
+
 <h1>Introduction</h1>
 
 <p>
