--- a/xdocs/documentation.html
+++ b/xdocs/documentation.html
@@ -40,6 +40,7 @@ Geronimo.
   <li>Release Notes are available for milestone releases:
     <ul>
       <li><a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/RELEASE-NOTES-1.0-M2.txt">Milestone 2</a></li>
+      <li><a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/RELEASE-NOTES-1.0-M3.txt">Milestone 3</a></li>
     </ul>
   </li>
 </ul>
