Update to M3 release
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@57445 13f79535-47bb-0310-9956-ffa450edef68

--- a/xdocs/download.html
+++ b/xdocs/download.html
@@ -28,7 +28,7 @@
 <h1>Certified Downloads</h1>
 
 <p>
-Currently, the Apache Geronimo has no certified releases.
+Currently, Apache Geronimo has no certified releases.
 </p>
 
 <h1>Milestone Downloads</h1>
@@ -40,7 +40,39 @@ releases are 'technology demonstrations' and not offered as a J2EE-compatible
 server.
 </p>
 
+<h2>Release Notes</h2>
+
+<p><strong>Milestone 3</strong></p>
+<ul>
+<li>
+   <a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/RELEASE-NOTES-1.0-M3.txt">Release Notes</a>
+</li>
+</ul>
+
+<p><strong>Milestone 2</strong></p>
+<ul>
+<li>
+   <a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/RELEASE-NOTES-1.0-M2.txt">Release Notes</a>
+</li>
+</ul>
+
 <h2>Binaries</h2>
+<p><strong>Milestone 3</strong></p>
+<ul>
+<li><a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3.zip">1.0-M3 zip</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3.zip.asc">PGP</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3.zip.sha">SHA</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3.zip.md5">MD5</a>
+</li>
+<li>
+    <a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3.tar.gz">1.0-M3 tar.gz</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3.tar.gz.asc">PGP</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3.tar.gz.sha">SHA</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3.tar.gz.md5">MD5</a>
+</li>
+</ul>
+
+<p><strong>Milestone 2</strong></p>
 <ul>
 <li><a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2.zip">1.0-M2 zip</a>
     &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2.zip.asc">PGP</a>
@@ -53,12 +85,26 @@ server.
     &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2.tar.gz.sha">SHA</a>
     &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2.tar.gz.md5">MD5</a>
 </li>
-<li>
-   <a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/RELEASE-NOTES-1.0-M2.txt">Release Notes</a>
-</li>
 </ul>
 
 <h2>Source Code</h2>
+<p><strong>Milestone 3</strong></p>
+<ul>
+<li>
+   <a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3-src.zip">1.0-M3 zip</a>
+   &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3-src.zip.asc">PGP</a>
+   &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3-src.zip.sha">SHA</a>
+   &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3-src.zip.md5">MD5</a>
+</li>
+<li>
+    <a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3-src.tar.gz">1.0-M3 tar.gz</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3-src.tar.gz.asc">PGP</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3-src.tar.gz.sha">SHA</a>
+    &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3-src.tar.gz.md5">MD5</a>
+</li>
+</ul>
+
+<p><strong>Milestone 2</strong></p>
 <ul>
 <li>
    <a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/geronimo-1.0-M2-src.zip">1.0-M2 zip</a>
