Add M3 release to news Correct JBoss letter link in news Add installer and revised README to overview and download pages
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@106457 13f79535-47bb-0310-9956-ffa450edef68

--- a/xdocs/download.html
+++ b/xdocs/download.html
@@ -57,6 +57,13 @@ server.
 </ul>
 
 <h2>Binaries</h2>
+<p>As of Milestone 3, we have an installer that you can run to install
+Geronimo.  If you install from the zip file, you can just unzip and go.
+If you install from the installer, you get a traditional wizard-style
+interface.  The important difference is that the installer lets you change
+the default ports and administrative login, while the zip install does
+not.</p>
+
 <p><strong>Milestone 3</strong></p>
 <ul>
 <li><a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3.zip">1.0-M3 zip</a>
@@ -70,6 +77,13 @@ server.
     &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3.tar.gz.sha">SHA</a>
     &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3.tar.gz.md5">MD5</a>
 </li>
+<li><a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3-installer.jar">Geronimo 1.0 M3 Installer</a> -- this is a test release of the installer.  It's an executable JAR, so install it using <tt>java -jar geronimo-1.0-M3-installer.jar</tt></li>
+</ul>
+<p><strong>Note:</strong> The Milestone 3 release did not include an updated
+<tt>README</tt> file, and as a result, the instructions included in the README
+are incorrect.  Please use the following:</p>
+<ul>
+  <li><a href="http://svn.apache.org/viewcvs.cgi/*checkout*/geronimo/trunk/README.txt?rev=106435">Corrected Milestone 3 README.txt</a></li>
 </ul>
 
 <p><strong>Milestone 2</strong></p>
