--- a/xdocs/index.html
+++ b/xdocs/index.html
@@ -72,9 +72,16 @@ server.
     &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3.tar.gz.sha">SHA</a>
     &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3.tar.gz.md5">MD5</a>
 </li>
+<li><a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3-installer.jar">Geronimo 1.0 M3 Installer</a> -- this is a test release of the installer.  It's an executable JAR, so install it using <tt>java -jar geronimo-1.0-M3-installer.jar</tt></li>
 <li>
    <a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/RELEASE-NOTES-1.0-M3.txt">Release Notes</a>
 </li>
+</ul>
+<p><strong>Note:</strong> The Milestone 3 release did not include an updated
+<tt>README</tt> file, and as a result, the instructions included in the README
+are incorrect.  Please use the following:</p>
+<ul>
+  <li><a href="http://svn.apache.org/viewcvs.cgi/*checkout*/geronimo/trunk/README.txt?rev=106435">Corrected Milestone 3 README.txt</a></li>
 </ul>
 
 <h2>Source Code</h2>
