--- a/xdocs/news.html
+++ b/xdocs/news.html
@@ -27,14 +27,20 @@
 
 <h1>Project News</h1>
 
-<h4>2003-11-11</h4>
+<h4>2004-11-10</h4>
 <p>
-We have recieved a mail  <a href="geronimo/20031031_jboss.pdf">a letter on behalf of
-the JBoss Group, LCC dated October 31, 2003</a>that asks for clarifications regarding 
-similarity between parts of the Geronimo codebase and the JBoss codebase. 
-We are in the process of actively reviewing not only the specific claims but also the code base in general. 
+The Milestone 3 release has been posted for download.  Visit the
+<a href="/download.html">download page</a> and take a look at the
+<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/RELEASE-NOTES-1.0-M3.txt">release notes</a>!
 </p>
 
+<h4>2004-10-30</h4>
+<p>
+The Apache Software Foundation has sent a response to the attorneys representing
+JBoss Inc. detailing our conclusions related to the letter from Oct 31, 2003.
+Copies of the <a href="20031031_jboss.pdf">original letter</a> and the
+<a href="20041028_jbossresponse.pdf">response</a> are available for inspection.
+</p>
 
 <h4>2003-11-18</h4>
 <p>
@@ -44,13 +50,12 @@ Java specificaitons, the Geronimo project is now able to test and certify the co
 will begin at the appropriate time.
 </p>
 
-
-<h4>2004-10-30</h4>
+<h4>2003-11-11</h4>
 <p>
-The Apache Software Foundation has sent a response to the attorneys representing
-JBoss Inc. detailing our conclusions related to the letter from Oct 31, 2003.
-Copies of the <a href="20031031_jboss.pdf">original letter</a> and the
-<a href="20041028_jbossresponse.pdf">response</a> are available for inspection.
+We have recieved a mail  <a href="20031031_jboss.pdf">a letter on behalf of
+the JBoss Group, LCC dated October 31, 2003</a> that asks for clarifications regarding 
+similarity between parts of the Geronimo codebase and the JBoss codebase. 
+We are in the process of actively reviewing not only the specific claims but also the code base in general. 
 </p>
 
 </body>
