Added dates to the releases
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@152648 13f79535-47bb-0310-9956-ffa450edef68

--- a/xdocs/download.html
+++ b/xdocs/download.html
@@ -43,6 +43,7 @@ server.
 <h2>Release Notes</h2>
 
 <p><strong>Milestone 3</strong></p>
+<p>Release Date: November 10, 2004</p>
 <ul>
 <li>
    <a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/RELEASE-NOTES-1.0-M3.txt">Release Notes</a>
@@ -50,6 +51,7 @@ server.
 </ul>
 
 <p><strong>Milestone 2</strong></p>
+<p>Release Date: September 09, 2004</p>
 <ul>
 <li>
    <a href="http://cvs.apache.org/dist/geronimo/v1.0-M2/RELEASE-NOTES-1.0-M2.txt">Release Notes</a>
