--- a/xdocs/index.html
+++ b/xdocs/index.html
@@ -60,6 +60,7 @@ server.
 </p>
 
 <h2>Binaries</h2>
+<p>Release Date: November 10, 2004</p>
 <ul>
 <li><a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3.zip">1.0-M3 zip</a>
     &nbsp;<a href="http://cvs.apache.org/dist/geronimo/v1.0-M3/geronimo-1.0-M3.zip.asc">PGP</a>
