--- a/sandbox/daytrader/modules/web/src/webapp/topBanner.html
+++ b/sandbox/daytrader/modules/web/src/webapp/topBanner.html
@@ -13,7 +13,7 @@
             <TD width="130" bgcolor="#000000" background="images/IBMBackGround1.gif" rowspan="2" align="center"><IMG src="images/lanim.gif" width="150" height="47" border="0" vspace="10"><FONT size="-2" color="#FFCC00"><BR>
             &nbsp;<B>Performance Application&nbsp;&nbsp;</B></FONT></TD>
             <TD valign="middle" bgcolor="#0080c0" background="images/IBMBackGround1.gif" colspan="2" align="right" height="63"><IMG src="images/topline.jpg" border="0" height="3" width="428"><BR>
-            <IMG src="images/DayTraderHead_red.gif" border="0" width="97" height="41" align="top"></TD>
+            <IMG src="images/DayTraderHead_red.gif" border="0" align="top"></TD>
         </TR>
     <TR>
             <TD align="center" bgcolor="#000000" height="15" width="440"><FONT size="-1"><B><I><FONT face="Arial"><FONT color="#FFFFFF">Geronimo Performance Benchmark Sample</FONT></FONT></I></B></FONT></TD>
