DayTrader updates to clean up the directory
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.0@355704 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/daytrader/web/src/webapp/leftMenu.html
+++ b/applications/daytrader/web/src/webapp/leftMenu.html
@@ -11,7 +11,7 @@
 <P align="center"><FONT size="-1"><A href="contentHome.html" target="TradeFrameMain"><FONT size="2"><BR>
 <BR>
 Overview</FONT></A></FONT></P>
-<P align="center"><FONT size="-1"><A href="docs/documentation.html" target="TradeFrameMain"><FONT size="2">Technical <BR>
+<!-- <P align="center"><FONT size="-1"><A href="docs/documentation.html" target="TradeFrameMain"><FONT size="2">Technical <BR> -->
 Documentation</FONT></A></FONT></P>
 <P align="center"><FONT size="-1"><A href="docs/benchmarking.html" target="TradeFrameMain"><FONT size="2">Benchmarking</FONT></A></FONT></P>
 <P align="center"><FONT size="2"><A href="configure.html" target="TradeFrameMain">Configuration</A></FONT></P>
