Updated pages and removed old images
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.0@355864 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/daytrader/web/src/webapp/contentHome.html
+++ b/applications/daytrader/web/src/webapp/contentHome.html
@@ -17,7 +17,7 @@
 <B>Model-View-Controller Architecture</B>
 
 </P>
-<BLOCKQUOTE><FONT size="-1"><B>Trade</B><BR>
+<BLOCKQUOTE><FONT size="-1"><B>DayTrader</B><BR>
 DayTrader is the Geronimo end-to-end benchmark and performance sample application. The new DayTrader benchmark has been re-designed and developed to cover Geronimo's significantly expanding programming model. This provides a real world workload driving Geronimo's implementation of J2EE 1.4 and Web Services including key Geronimo performance components and features.<BR>
 <BR>
 DayTrader's new design spans J2EE 1.4 including the new EJB 2.1 component architecture, Message Driven beans, transactions (1-phase, 2-phase commit) and Web Services (SOAP, WSDL).<BR>
