--- a/applications/daytrader/web/src/webapp/topBanner.html
+++ b/applications/daytrader/web/src/webapp/topBanner.html
@@ -10,14 +10,14 @@
 <TABLE width="814" bgcolor="#000000" background="images/IBMBackGround1.gif">
   <TBODY>
     <TR>
-            <TD width="130" bgcolor="#000000" background="images/IBMBackGround1.gif" rowspan="2" align="center"><IMG src="images/lanim.gif" width="150" height="47" border="0" vspace="10"><FONT size="-2" color="#FFCC00"><BR>
+            <TD width="130" bgcolor="#000000" background="images/IBMBackGround1.gif" rowspan="2" align="center"><IMG src="images/GLogo_450x50.gif" width="150" height="34" border="0" vspace="10"><FONT size="-2" color="#FFCC00"><BR>
             &nbsp;<B>Performance Application&nbsp;&nbsp;</B></FONT></TD>
             <TD valign="middle" bgcolor="#0080c0" background="images/IBMBackGround1.gif" colspan="2" align="right" height="63"><IMG src="images/topline.jpg" border="0" height="3" width="428"><BR>
             <IMG src="images/DayTraderHead_red.gif" border="0" align="top"></TD>
         </TR>
     <TR>
             <TD align="center" bgcolor="#000000" height="15" width="440"><FONT size="-1"><B><I><FONT face="Arial"><FONT color="#FFFFFF">Geronimo Performance Benchmark Sample</FONT></FONT></I></B></FONT></TD>
-            <TD align="right" bgcolor="#ffffff" height="15" width="112"><IMG src="images/WEBSPHERE_18P_UNIX.GIF" width="113" height="18" border="0"></TD>
+            <!-- <TD align="right" bgcolor="#ffffff" height="15" width="112"><IMG src="images/GLogo_450x50.gif" border="0"></TD> -->
         </TR>
   </TBODY>
 </TABLE>
