--- a/applications/daytrader/web/src/webapp/leftMenu.html
+++ b/applications/daytrader/web/src/webapp/leftMenu.html
@@ -11,17 +11,17 @@
 <P align="center"><FONT size="-1"><A href="contentHome.html" target="TradeFrameMain"><FONT size="2"><BR>
 <BR>
 Overview</FONT></A></FONT></P>
-<!-- <P align="center"><FONT size="-1"><A href="docs/documentation.html" target="TradeFrameMain"><FONT size="2">Technical <BR> -->
-Documentation</FONT></A></FONT></P>
+<!-- <P align="center"><FONT size="-1"><A href="docs/documentation.html" target="TradeFrameMain"><FONT size="2">Technical <BR> 
+Documentation</FONT></A></FONT></P> -->
 <P align="center"><FONT size="-1"><A href="docs/benchmarking.html" target="TradeFrameMain"><FONT size="2">Benchmarking</FONT></A></FONT></P>
 <P align="center"><FONT size="2"><A href="configure.html" target="TradeFrameMain">Configuration</A></FONT></P>
 <P align="center"><FONT size="-1"><A href="app" target="TradeFrameMain"><FONT size="2">Go Trade!</FONT></A></FONT></P>
 <P align="center"><FONT size="-1"><A href="web_prmtv.html" target="TradeFrameMain">Web Primitives</A></FONT></P>
 <HR width="130" size="1" align="center">
-<P align="center"><I><IMG src="images/DayTraderHead_red.gif" border="0" width="112" height="36"><BR>
+<!-- <P align="center"><I><IMG src="images/DayTraderHead_red.gif" border="0" width="112" height="36"><BR>
 <BR>
-</I><B><IMG src="images/WEBSPHERE_18P_UNIX.GIF" width="113" height="18" border="0"><BR>
-</B></P>
-<HR width="130" size="1" align="center">
+</I><B><IMG src="images/GLogo_450x50.gif" width="150" height="21" border="0"><BR>
+</B></P> 
+<HR width="130" size="1" align="center"> -->
 </BODY>
 </HTML>
